Deleted some useless/ old files. Added logo in footer. Made some adjustments on homepage. Home icon and logo in header linked to homepage on every page. Generally made some adjustments and tidying up.

--- a/impressum.html
+++ b/impressum.html
@@ -11,23 +11,24 @@
     <link rel="icon" href="Images/Icons/LogoKleinTab.png" class="tabLogo">
 </head>
 
-
 <body>
     <header>
-    
-    <section class="toolbar">
-        <div class="toolbarLeft">
-            <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-            <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
-        </div>
-        <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
-            <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
-        </div>
-    </section>
+        <section class="toolbar">
+            <div class="toolbarLeft">
+                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <a href="index.html">
+                    <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
+                </a>
+            </div>
 
+            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
+        </section>
 
-
-        <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
+        <a href="index.html">
+            <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
+        </a>
 
         <section class="menu-container">
             <a href="index.html" class="button menu">Home</a>
@@ -36,13 +37,15 @@
             <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
     </header>
+
     <div class="flexbox">
         <h1 class="pageTitle">Impressum</h1>
         <section class="impressumContainer">
             <h2 class="impressumText">Kontaktadresse</h2>
             <p class="impressumText">BÄRNLÄBT GmbH, Holzikofenweg 8, 3000 Bern, Schweiz</p>
             <h2 class="impressumText">Haftungsausschluss</h2>
-            <p class="impressumText">Der Autor übernimmt keinerlei Gewähr hinsichtlich der inhaltlichen Richtigkeit, Genauigkeit, Aktualität,
+            <p class="impressumText">Der Autor übernimmt keinerlei Gewähr hinsichtlich der inhaltlichen Richtigkeit,
+                Genauigkeit, Aktualität,
                 Zuverlässigkeit und Vollständigkeit der Informationen. Haftungsansprüche gegen den Autor wegen Schäden
                 materieller oder immaterieller Art, welche aus dem Zugriff oder der Nutzung bzw. Nichtnutzung der
                 veröffentlichten Informationen, durch Missbrauch der Verbindung oder durch technische Störungen
@@ -57,12 +60,14 @@
                 solche Webseiten abgelehnt. Der Zugriff und die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des
                 Nutzers oder der Nutzerin.</p>
             <h2 class="impressumText">Urheberrechte</h2>
-            <p class="impressumText">Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website
+            <p class="impressumText">Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen
+                Dateien auf der Website
                 gehören
                 ausschliesslich der Firma BÄRNLÄBT GmbH oder den speziell genannten Rechtsinhabern. Für die Reproduktion
                 jeglicher Elemente ist die schriftliche Zustimmung der Urheberrechtsträger im Voraus einzuholen.</p>
             <h2 class="impressumText">Datenschutz</h2>
-            <p class="impressumText">Gestützt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen
+            <p class="impressumText">Gestützt auf Artikel 13 der schweizerischen Bundesverfassung und die
+                datenschutzrechtlichen Bestimmungen
                 des
                 Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz
                 vor
@@ -73,6 +78,7 @@
                 Missbrauch oder vor Fälschung zu schützen.</p>
         </section>
     </div>
+
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -92,13 +98,13 @@
             <p class="footerText">Fr: </p>
             <p class="footerText">bis 16:00 Uhr</p>
         </section>
+
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
             <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
             <a href="impressum.html" class="footerText">Impressum</a>
-
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
@@ -106,13 +112,12 @@
             <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
             <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
             <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
-
         </section>
-
     </footer>
 
-
-
+    <div class="footerLogoContainer">
+        <img src="Images/LogoKlein.png" alt="Logo BÄRNLÄBT" class="footerLogo">
+    </div>
 </body>
 
 </html>
