--- a/angebot.html
+++ b/angebot.html
@@ -11,21 +11,24 @@
     <link rel="icon" href="Images/Icons/LogoKleinTab.png" class="tabLogo">
 </head>
 
-
 <body>
     <header>
-    <section class="toolbar">
-        <div class="toolbarLeft">
-            <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-            <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
-        </div>
-        <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
-            <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
-        </div>
-    </section>
+        <section class="toolbar">
+            <div class="toolbarLeft">
+                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <a href="index.html">
+                    <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
+                </a>
+            </div>
 
+            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
+        </section>
 
-        <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
+        <a href="index.html">
+            <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
+        </a>
 
         <section class="menu-container">
             <a href="index.html" class="button menu">Home</a>
@@ -33,24 +36,23 @@
             <a href="ueberuns.html" class="button menu">Über uns</a>
             <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
-
     </header>
+
     <div class="main">
         <section class="sectionCalendar">
             <article class="datumswahl">
                 <p class="datumPfeile">
                     &lt;</p>
-                        <p class="datum">Heute</p>
-                        <p class="datumPfeile">&gt;</p>
+                <p class="datum">Heute</p>
+                <p class="datumPfeile">&gt;</p>
             </article>
-            <article class="mapKalender">
 
+            <article class="mapKalender">
                 <img src="Images/Angebot/Karte.png"
                     alt="Karte von der Stadt Bern mit verschiedenen Events, angezeigt wird ein Töpferkurs."
                     class="eventKarte">
                 <img src="Images/Angebot/Kalender.png" alt="Kalender auf dem Die Events angezeigt werden."
                     class="eventKarte">
-
             </article>
 
             <article class="suchbox">
@@ -69,8 +71,10 @@
                 </div>
             </article>
         </section>
+
         <section class="sectionBeschreibung">
             <h3 id="schnöigge">chasch ruhig chli schnöigge</h3>
+
             <article class="paragraph">
                 <p class="paragraphTitel">Entdecke unseren Kalender voller aktueller Events.</p>
                 <p class="paragraphText">An einem Interessiert? Ausgezeichnet!</p>
@@ -79,37 +83,41 @@
             </article>
         </section>
     </div>
+
     <section class="angebotLink">
         <a href=# id="zurKarte">zur Karte</a>
         <a href=# id="zumKalender">zum Kalender</a>
-
     </section>
+
     <div class="main">
         <h3 id="weird">«Egau, wie weird du besch, do dosse gets no öpper wo genauso tickt.»</h3>
+
         <article class="paragraph">
             <p class="paragraphTitel">Möchtest du einen eigenen Event organisieren?</p>
             <p class="paragraphText">Dann trage es einfach in deinen privaten Kalender ein und stelle die
                 Veranstaltung auf öffentlich.</p>
             <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
         </article>
+
         <img src="Images/Angebot/iPhoneBeerpong.png"
             alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird" id="beerpong">
         <h3 id="verein">«e Verein fäggt, imfau!»</h3>
+
         <article class="paragraph">
             <p class="paragraphTitel">Entdecke deinen Verein.</p>
             <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst
                 oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
             <p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse
                 Leidenschaft wartet schon auf dich. </p>
-
-
         </article>
+
         <a href="Index.html" class="button">alle Vereine</a>
 
         <img src="Images/Angebot/Basketball.jpg" alt="Symbolbild Basketball" class="roundImage" id="basketball">
 
         <a class="button" id="impressum" href="impressum.html"> Impressum </a>
     </div>
+
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -129,13 +137,13 @@
             <p class="footerText">Fr: </p>
             <p class="footerText">bis 16:00 Uhr</p>
         </section>
+
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
             <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
             <a href="impressum.html" class="footerText">Impressum</a>
-
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
@@ -143,11 +151,12 @@
             <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
             <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
             <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
-
         </section>
-
     </footer>
 
+    <div class="footerLogoContainer">
+        <img src="Images/LogoKlein.png" alt="Logo BÄRNLÄBT" class="footerLogo">
+    </div>
 </body>
 
 </html>
