--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 </head>
 
 <body>
-
     <header>
-
         <section class="toolbar">
             <div class="toolbarLeft">
                 <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
                 <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
             </div>
+
             <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
                 <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
             </div>
@@ -37,13 +36,15 @@
 
         <p id="headerUnterschrift">BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
     </header>
+
     <div class="main">
         <section>
-            <Article class="teaser">
+            <article class="teaser">
                 <div class="teaserImageBox">
                     <img src="Images/Home/BildGspaendli.jpeg" alt="vier freunde sitzen gemütlich beieinander"
                         class="teaserimage">
                 </div>
+
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Gspändli finden</h2>
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
@@ -54,7 +55,6 @@
             </article>
 
             <article class="teaser reverse">
-
                 <div class="teaserBoxLinks">
                     <h2 class="teaserTextLinks">Event finde</h2>
                     <p class="teaserTextLinks">BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der
@@ -63,11 +63,11 @@
                     </p>
                     <a href="angebot.html" class="button">Mehr erfahren</a>
                 </div>
+
                 <div class="teaserImageBox">
                     <img src="Images/Home/BildEvent.jpg" alt="Symbolbild 4 junge menschen an einer Party"
                         class="teaserimage">
                 </div>
-
             </article>
 
             <h3 id="spass">z'zwoite machts eifach meh Spass</h3>
@@ -78,11 +78,12 @@
                     class="largeimage">
             </article>
 
-            <Article class="teaser">
+            <article class="teaser">
                 <div class="teaserImageBox">
                     <img src="Images/Home/BildEventErstellen.jpg" alt="Symbolbild 4 junge menschen an einer Party"
                         class="teaserimage">
                 </div>
+
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Event erstöue</h2>
                     <p class="teaserTextRechts">Aus BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und
@@ -100,27 +101,28 @@
                     </p>
                     <a href="angebot.html" class="button">Mehr erfahren</a>
                 </div>
+
                 <div class="teaserImageBox">
                     <img src="Images/Home/BildHobby.png" alt="Ein Junger Mann beim Surfen" class="teaserimage">
                 </div>
             </article>
         </section>
-        <Section class="eventliste">
+
+        <section class="eventliste">
             <h2>Aktuelle Events</h2>
 
-            <article class="event" id="eventPink">
+            <article class="event" id="eventGrün">
                 <div>
                     <h2 class="eventTitel">Berner Kulturfestival</h2>
                     <p>Erlebe das Berner Kulturfestival, eine einzigartige Feier der Vielfalt und Kreativität! Tauche
                         ein in ein facettenreiches Programm aus Live-Musik, fesselnden Kunstausstellungen und
                         inspirierenden Performances, die die reiche Kultur der Region widerspiegeln. </p>
-
                 </div>
+
                 <div class="eventDatum">
                     <p class="eventTag">09</p>
                     <p class="eventMonat"> NOV</p>
                 </div>
-
             </article>
 
             <article class="event" id="eventRot">
@@ -130,21 +132,21 @@
                         deine Hüften schwingen und deine Moves zeigen kannst. Lass dich von den groovy Rythmen von DJ
                         WIZ
                         mitreissen und tanze bis in die frühen Morgenstunden. </p>
-
                 </div>
+
                 <div class="eventDatum">
                     <p class="eventTag">12</p>
                     <p class="eventMonat"> NOV</p>
                 </div>
-
             </article>
-            <article class="event" id="eventGrün">
+
+            <article class="event" id="eventPink">
                 <div>
                     <h2 class="eventTitel">Streetfood-Festival 2023</h2>
                     <p>Freue dich auf kulinarische Höhepunkte beim Berner Streetfoodfestival 2023. Auf BÄRNLÄBT kannst
                         du deine kulinarischen Vorlieben teilen und die passende Begleitung finden. Sei dabei! </p>
-
                 </div>
+
                 <div class="eventDatum">
                     <p class="eventTag">13</p>
                     <p class="eventMonat"> NOV</p>
@@ -152,7 +154,7 @@
 
             </article>
             <a href="angebot.html" class="button">Mehr erfahren</a>
-        </Section>
+        </section>
 
         <section class="boxRezensionen">
             <article class="userRezension">
@@ -163,6 +165,7 @@
                 </p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit November 2023</p>
             </article>
+
             <article class="userRezension" id="rezensionTobias">
                 <img src="Images/Home/Tobias.jpg" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Tobias, 21</p>
@@ -170,6 +173,7 @@
                     Möglichkeit Veranstaltungen zu finden und sich mit anderen zu verbinden, ist einzigartig»</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit Juni 2023</p>
             </article>
+
             <article class="userRezension">
                 <img src="Images/Home/Leah.jpg" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Leah, 23</p>
@@ -178,9 +182,9 @@
                 </p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit August 2023</p>
             </article>
-
         </section>
     </div>
+
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -190,8 +194,8 @@
             <p class="footerTitel">Kontakt</p>
             <p class="footerText">info@baernlaebt.ch</p>
             <p class="footerText">+41 31 333 31 01</p>
-
         </section>
+
         <section class="footerTextContainer" id="footerColumn2">
             <p class="footerTitel">Öffnungszeiten</p>
             <p class="footerText">Mo-Do:</p>
@@ -200,13 +204,13 @@
             <p class="footerText">Fr: </p>
             <p class="footerText">bis 16:00 Uhr</p>
         </section>
+
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
             <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
             <a href="impressum.html" class="footerText">Impressum</a>
-
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
@@ -214,18 +218,12 @@
             <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
             <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
             <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
-
         </section>
-
     </footer>
 
     <div class="footerLogoContainer">
         <img src="Images/LogoKlein.png" alt="Logo BÄRNLÄBT" class="footerLogo">
     </div>
-
-
-
-
 </body>
 
 </html>
