All pages revised and adjusted. Files organised (structure, layout etc.).

--- a/angebot.html
+++ b/angebot.html
@@ -63,8 +63,8 @@
             </article>
 
             <article class="einladungBox">
-                <p class="paragraphTitel center">Mach den ersten Schritt</p>
-                <p class="paragraphText center">Neugierig auf neue Gspändli in deiner Umgebung?</p>
+                <p id="einladungTitel">Mach den ersten Schritt</p>
+                <p id="einladungText">Neugierig auf neue Gspändli in deiner Umgebung?</p>
                 <div class=einladungAnmeldung>
                     <a href=# id="anmelden">Anmelden</a>
                     <a href=# id="registrieren">Registrieren</a>
@@ -101,6 +101,9 @@
 
         <img src="Images/Angebot/iPhoneBeerpong.png"
             alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird" id="beerpong">
+
+        <a href="#" class="button">Event erstellen</a>
+
         <h3 id="verein">«e Verein fäggt, imfau!»</h3>
 
         <article class="paragraph">
@@ -111,7 +114,7 @@
                 Leidenschaft wartet schon auf dich. </p>
         </article>
 
-        <a href="Index.html" class="button">alle Vereine</a>
+        <a href="#" class="button">alle Vereine</a>
 
         <img src="Images/Angebot/Basketball.jpg" alt="Symbolbild Basketball" class="roundImage" id="basketball">
 
