--- a/impressum.html
+++ b/impressum.html
@@ -79,6 +79,12 @@
         </section>
     </div>
 
+    <div class="main">
+        <img src=".//Images/Logo.png" alt="Logo Bärnläbt" id="logoImpressum">
+
+        <a href="Index.html" class="button">Home</a>
+    </div>
+
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
