--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
         </section>
 
-        <img src="Images/Logo.png" alt="logo Bärnläbt" class="logoHome">
-        <h1>wöus zäme meh fäggt!</h1>
+        <img src="Images/Logo.png" alt="Logo Bärnläbt" class="logoHome">
+        <h1 id="claim">wöus zäme meh fäggt!</h1>
 
         <section class="menu-container">
             <a href="index.html" class="button menu" id="buttonActive">Home</a>
@@ -50,7 +50,7 @@
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
                         Events und Aktivitäten?
                         Dann finde jetzt Anlässe und Gleichgesinnte!
-                    </p> <a href="angebot.html" class="button">Los gehts</a>
+                    </p> <a href="angebot.html" class="button" id="buttonAligned">Los gehts</a>
                 </div>
             </article>
 
@@ -61,7 +61,7 @@
                         Stadt Bern zu suchen.
                         Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
                     </p>
-                    <a href="angebot.html" class="button">Mehr erfahren</a>
+                    <a href="angebot.html" class="button" id="buttonAligned">Mehr erfahren</a>
                 </div>
 
                 <div class="teaserImageBox">
@@ -88,7 +88,7 @@
                     <h2 class="teaserTextRechts">Event erstöue</h2>
                     <p class="teaserTextRechts">Aus BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und
                         gleichgesinnte Personen finden, die sich für deine Veranstaltung interessieren.
-                    </p> <a href="angebot.html" class="button">Los gehts</a>
+                    </p> <a href="angebot.html" class="button" id="buttonAligned">Los gehts</a>
                 </div>
             </article>
 
@@ -99,7 +99,7 @@
                         diese
                         zusammen mit jemandem besuchen, der deine Leidenschaft teilt.
                     </p>
-                    <a href="angebot.html" class="button">Mehr erfahren</a>
+                    <a href="angebot.html" class="button" id="buttonAligned">Mehr erfahren</a>
                 </div>
 
                 <div class="teaserImageBox">
@@ -183,6 +183,7 @@
                 <p class="datumRezensionen">bei BÄRNLÄBT seit August 2023</p>
             </article>
         </section>
+        <a class="button" id="impressum" href="impressum.html"> Impressum </a>
     </div>
 
     <footer>
