--- a/ueberuns.html
+++ b/ueberuns.html
@@ -36,8 +36,8 @@
             <a href="ueberuns.html" class="button menu" id="buttonActive">Über uns</a>
             <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
-
     </header>
+
     <div class="main">
         <section>
             <article class="salut">
@@ -164,7 +164,7 @@
                 </p>
                 <p>Wieso?</p>
             </article>
-            <h2>Wöus zäme meh fäggt!</h2>
+            <h3 id="claim">Wöus zäme meh fäggt!</h3>
         </section>
 
         <section>
@@ -174,7 +174,7 @@
                 allowfullscreen></iframe>
         </section>
 
-        <section>
+        <section class="kontaktBox">
             <article class="kontaktText">
                 <p class="paragraphKontaktText">Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein
                     Feedback
