Overall changes and adjustments.

--- a/impressum.html
+++ b/impressum.html
@@ -82,7 +82,7 @@
     <div class="main">
         <img src=".//Images/Logo.png" alt="Logo Bärnläbt" id="logoImpressum">
 
-        <a href="Index.html" class="button">Home</a>
+        <a href="Index.html" class="button" id="buttonHome">Home</a>
     </div>
 
     <footer>
