--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="teaserBoxRechts">
-                    <h2 class="teaserTextRechts">Gspändli finden</h2>
+                    <h2 class="teaserTextRechts">Gspändli finde</h2>
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
                         Events und Aktivitäten?
                         Dann finde jetzt Anlässe und Gleichgesinnte!
@@ -114,7 +114,8 @@
             <article class="event" id="eventGrün">
                 <div>
                     <h2 class="eventTitel">Berner Kulturfestival</h2>
-                    <p>Erlebe das Berner Kulturfestival, eine einzigartige Feier der Vielfalt und Kreativität! Tauche
+                    <p class="eventText">Erlebe das Berner Kulturfestival, eine einzigartige Feier der Vielfalt und
+                        Kreativität! Tauche
                         ein in ein facettenreiches Programm aus Live-Musik, fesselnden Kunstausstellungen und
                         inspirierenden Performances, die die reiche Kultur der Region widerspiegeln. </p>
                 </div>
@@ -128,7 +129,8 @@
             <article class="event" id="eventRot">
                 <div>
                     <h2 class="eventTitel">Turnhalle - E.Grooves</h2>
-                    <p> Bist du bereit, die Tanzfläche zum Beben zu bringen? Eclectic Grooves ist die Party auf der du
+                    <p class="eventText"> Bist du bereit, die Tanzfläche zum Beben zu bringen? Eclectic Grooves ist die
+                        Party auf der du
                         deine Hüften schwingen und deine Moves zeigen kannst. Lass dich von den groovy Rythmen von DJ
                         WIZ
                         mitreissen und tanze bis in die frühen Morgenstunden. </p>
@@ -143,7 +145,8 @@
             <article class="event" id="eventPink">
                 <div>
                     <h2 class="eventTitel">Streetfood-Festival 2023</h2>
-                    <p>Freue dich auf kulinarische Höhepunkte beim Berner Streetfoodfestival 2023. Auf BÄRNLÄBT kannst
+                    <p class="eventText">Freue dich auf kulinarische Höhepunkte beim Berner Streetfoodfestival 2023. Auf
+                        BÄRNLÄBT kannst
                         du deine kulinarischen Vorlieben teilen und die passende Begleitung finden. Sei dabei! </p>
                 </div>
 
@@ -151,7 +154,6 @@
                     <p class="eventTag">13</p>
                     <p class="eventMonat"> NOV</p>
                 </div>
-
             </article>
             <a href="angebot.html" class="button">Mehr erfahren</a>
         </section>
@@ -166,7 +168,7 @@
                 <p class="datumRezensionen">bei BÄRNLÄBT seit November 2023</p>
             </article>
 
-            <article class="userRezension" id="rezensionTobias">
+            <article class="userRezension">
                 <img src="Images/Home/Tobias.jpg" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Tobias, 21</p>
                 <p class="textRezensionen">«BÄRNLÄBT hilft mir, mein soziales Umfeld in Bern zu erweitern. Die
