validated ureberuns & impressum

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 
             <article class="event" id="eventGrün">
                 <div>
-                    <h2 class="eventTitel">Berner Kulturfestival</h2>
+                    <h2 class="eventTitel" id="festivalDesktop">Berner Kulturfestival</h2>
+                    <h2 class="eventTitel" id="festivalMobile">Berner Kultur- festival</h2>
                     <p class="eventText">Erlebe das Berner Kulturfestival, eine einzigartige Feier der Vielfalt und
                         Kreativität! Tauche
                         ein in ein facettenreiches Programm aus Live-Musik, fesselnden Kunstausstellungen und
