--- a/ueberuns.html
+++ b/ueberuns.html
@@ -196,7 +196,7 @@
             <p class="adresse">+41 31 333 31 01 </p>
         </article>
         <a class="button" id="impressum" href="impressum.html"> Impressum </a>
-    </div class="main">
+    </div>
 
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
